Implementación de manejo de rutas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<div>it works!</div>
+<a routerLink = "">login</a>
+<a routerLink = "home">home</a>
+<a routerLink = "users">users</a>
+<router-outlet></router-outlet>
