--- a/src/app/share/card/card.component.html
+++ b/src/app/share/card/card.component.html
@@ -1,8 +1,3 @@
-<!--
-<div  *ngIf = "dataObs$ | async as post"> 
-      post 
+<div class="divCard">
+    <p>{{data}}</p>
 </div>
--->
-<p>
-  card works!
-</p>
