--- a/src/app/share/card/card.component.scss
+++ b/src/app/share/card/card.component.scss
@@ -3,7 +3,7 @@
     -moz-box-shadow: 3px 3px 22px 0px rgba(0, 0, 0, 0.75);
     box-shadow: 3px 3px 22px 0px rgba(0, 0, 0, 0.75);
     width: 100%;
-    height: 40px;
+    min-height: 40px;
 }
 
 p {
