--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,11 @@
-div{
-    color: crimson;
+.userInput {
+    margin-left: 31px;
+}
+
+div {
+    margin-top: 6px;
+}
+
+.button {
+    margin-left: 70px;
 }
